[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/entities/enemies/shadow_monster.gd" type="Script" id=1]
[ext_resource path="res://nodes/temporary_sprite.tscn" type="PackedScene" id=2]

[node name="shadow_monster" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
max_slope_angle = 0.785398
flippedH = false
flippedV = false
moveable_by_collision = true
movement_speed = 327.68
gravity_enabled = false
gravity_vector = Vector2( 0, 1152 )
can_be_pushed = false
HP = 100
max_HP = 100
invulnerability_time = 1.0
damage = 1
hp_drop_chance = 0.5
attack_duration = 0.2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="0"]

build_mode = 0
polygon = PoolVector2Array( -30, -16, -30, 16, 30, 16, 30, -16 )

[node name="temporary_sprite" parent="." index="1" instance=ExtResource( 2 )]

[node name="Label" parent="temporary_sprite" index="0"]

text = "Shadow Moster"

[node name="attack" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="light_entered" from="." to="." method="_on_shadow_monster_light_entered"]

[connection signal="light_exited" from="." to="." method="_on_shadow_monster_light_exited"]

[connection signal="tween_completed" from="attack" to="." method="_on_attack_tween_completed"]


[editable path="temporary_sprite"]
